unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/FON_With_Late_Fee_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>FON_With_Late_Fee_Adjustment__c</fullName>
    <label>With Late Fee Adjustment</label>
    <summaryFilterItems>
        <field>OrderApi__Sales_Order_Line__c.OrderApi__Is_Adjustment__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderApi__Sales_Order_Line__c.OrderApi__Item_Name__c</field>
        <operation>equals</operation>
        <value>CE Credits – Late Filing Fee</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderApi__Sales_Order_Line__c.OrderApi__Sales_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>