unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/FONInvoice_Date__c.field-meta.xml
<CustomField>
    <fullName>FONInvoice_Date__c</fullName>
    <formula>TEXT(MONTH( DATEVALUE(CreatedDate) ))&amp;&#39;/&#39;&amp;TEXT(DAY( DATEVALUE(CreatedDate) ))&amp;&#39;/&#39;&amp;TEXT(YEAR( DATEVALUE(CreatedDate) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Date</label>
    <type>Text</type>
</CustomField>