unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/Has_Prorate__c.field-meta.xml
<CustomField>
    <fullName>Has_Prorate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Prorate</label>
    <type>Checkbox</type>
</CustomField>