unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/Incorrect_Overall_Total__c.field-meta.xml
<CustomField>
    <fullName>Incorrect_Overall_Total__c</fullName>
    <formula>IF( FON_Actual_Sum__c != OrderApi__Overall_Total__c,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incorrect Overall Total</label>
    <type>Checkbox</type>
</CustomField>