unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice #</label>
    <type>Text</type>
</CustomField>