unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <formula>&#39;E&#39;&amp;FON_Billing_Quarter__c&amp;FON_Invoice_Year__c&amp;
IF(FON_Invoice_Timing__c == &#39;Annual&#39;, &#39;A&#39;, &#39;Q&#39;)&amp;
IF(FON_Billing_Type__c == &#39;Deposit Based&#39;, &#39;D&#39;, &#39;i&#39;)&amp;
Auto_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice #</label>
    <type>Text</type>
</CustomField>