unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/Invoice_Term__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Term__c</fullName>
    <formula>IF(Is_Sponsoring_Licensing_Invoice__c=true,
IF(NOT(ISBLANK(Custom_Coverage__c)),
Custom_Coverage__c,
Sponsored_Billing_Coverage__c
),
&#39;N/A&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coverage</label>
    <type>Text</type>
</CustomField>