unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/Is_Sponsoring_Licensing_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Is_Sponsoring_Licensing_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sponsoring/Licensing Invoice</label>
    <type>Checkbox</type>
</CustomField>