unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/Legacy_Sales_order_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Sales_order_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Sales order ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>