unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Amount_Paid__c</fullName>
    <description>Sum of all payments received for the sales order.</description>
    <inlineHelpText>Sum of all payments received for the sales order.</inlineHelpText>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>