unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Amount_Refunded__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Amount_Refunded__c</fullName>
    <description>The total amount of refunds that have been posted related to this sales order.</description>
    <inlineHelpText>The total amount of refunds that have been posted related to this sales order.</inlineHelpText>
    <label>Amount Refunded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>