unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Auto_Send_Proforma_Invoice_Emails__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Auto_Send_Proforma_Invoice_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked system will send proforma invoice automatically.</description>
    <inlineHelpText>When checked system will send proforma invoice automatically.</inlineHelpText>
    <label>Auto Send Proforma Invoice Emails</label>
    <type>Checkbox</type>
</CustomField>