unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Balance_Due__c</fullName>
    <description>Defines the remaining amount due for this sales order.</description>
    <formula>OrderApi__Overall_Total__c -  OrderApi__Amount_Paid__c + IF(OrderApi__Is_Invoiced__c, OrderApi__Amount_Refunded__c, 0) - OrderApi__Credits_Applied__c + OrderApi__Credits_and_Adjustments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total - Total Payments</inlineHelpText>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>