unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Business_Group__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Business_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override** Link to the business group record - business groups will auto-populate if not defined on entry.</description>
    <inlineHelpText>**System Calculated/Override** Link to the business group record - business groups will auto-populate if not defined on entry.</inlineHelpText>
    <label>Business Group</label>
    <referenceTo>OrderApi__Business_Group__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>