unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Campaign_Page__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Campaign_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Page</label>
    <referenceTo>OrderApi__Campaign_Page__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>