unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Cancelled_Date__c</fullName>
    <description>The date the contract or subscription was cancelled.</description>
    <inlineHelpText>The date the contract or subscription was cancelled.</inlineHelpText>
    <label>Cancelled Date</label>
    <type>Date</type>
</CustomField>