unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Closed_Date__c</fullName>
    <description>The date the Sales Order was closed.</description>
    <inlineHelpText>The date the Sales Order was closed.</inlineHelpText>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>