unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Closed_Status__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Closed_Status__c</fullName>
    <description>**System Calculated/Conditional/Override** A status description for &quot;Closed&quot; Sales Orders.</description>
    <inlineHelpText>**System Calculated/Conditional/Override** A status description for &quot;Closed&quot; Sales Orders.</inlineHelpText>
    <label>Closed Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash Sale</fullName>
            </value>
            <value>
                <fullName>Drafting Payment Schedule</fullName>
            </value>
            <value>
                <fullName>Scheduled for Payment</fullName>
            </value>
            <value>
                <fullName>Drafting Invoice</fullName>
            </value>
            <value>
                <fullName>Invoiced to Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>