unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Created_by_Customer__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Created_by_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when a Sales Order was created from the front-end shopping cart.</description>
    <inlineHelpText>Checked when a Sales Order was created from the front-end shopping cart.</inlineHelpText>
    <label>Created by Customer</label>
    <type>Checkbox</type>
</CustomField>