unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Credits_and_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Credits_and_Adjustments__c</fullName>
    <description>The sum of all credits and adjustments related to this Sales Order.</description>
    <inlineHelpText>The sum of all credits and adjustments related to this Sales Order.</inlineHelpText>
    <label>Credit Notes/Adjustments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>