unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Credits_Applied__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Credits_Applied__c</fullName>
    <description>Sum of all payments received using credits on the account for the sales order.</description>
    <inlineHelpText>Sum of all payments received using credits on the account for the sales order.</inlineHelpText>
    <label>Credits Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>