unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Customer_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Customer_Reference_Number__c</fullName>
    <description>The customer reference number, typically a purchase order number, included on quotes and invoices generated from the sales order.</description>
    <inlineHelpText>The customer reference number, typically a purchase order number, included on quotes and invoices generated from the sales order.</inlineHelpText>
    <label>Customer Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>