unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Date__c</fullName>
    <description>The date the Sales Order was created. Default value is today&#39;s date.</description>
    <inlineHelpText>The date the Sales Order was created. Default value is today&#39;s date.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>