unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Description__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Description__c</fullName>
    <description>Text field to capture information about the Sales Order.</description>
    <inlineHelpText>Internal facing descriptions will not appear and should not be included in customer-facing communications.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>