unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Due_Date__c</fullName>
    <description>**System Calculated** Invoice Date field + Payment Term.Variable</description>
    <inlineHelpText>**System Calculated** Invoice Date field + Payment Term.Variable</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>