unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__End_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__End_Date__c</fullName>
    <description>The date when the subscription ends. This date will always be the current term end date or the subscription cancelled date where appropriate.</description>
    <inlineHelpText>The date when the subscription ends. This date will always be the current term end date or the subscription cancelled date where appropriate.</inlineHelpText>
    <label>Schedule End Date</label>
    <type>Date</type>
</CustomField>