unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Entity__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Entity__c</fullName>
    <description>**Required** Select &quot;Account&quot; if the related the account is responsible payment of the customer order, Select &quot;Contact&quot; if the related contact is responsible payment of the customer order.</description>
    <inlineHelpText>**Required** Select &quot;Account&quot; if the related the account is responsible payment of the customer order, Select &quot;Contact&quot; if the related contact is responsible payment of the customer order.</inlineHelpText>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>