unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__EPayment__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__EPayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override** Link to related Payment Activity.</description>
    <inlineHelpText>**System Calculated/Override** Link to related Payment Activity.</inlineHelpText>
    <label>E-Payment (Source)</label>
    <referenceTo>OrderApi__EPayment__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>