unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Generate_Installments__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Generate_Installments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, it creates the installment records for the invoice.</description>
    <inlineHelpText>When checked, it creates the installment records for the invoice.</inlineHelpText>
    <label>Generate Installments</label>
    <type>Checkbox</type>
</CustomField>