unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Has_Installments__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Has_Installments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Installments</label>
    <type>Checkbox</type>
</CustomField>