unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Has_Subscription__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Has_Subscription__c</fullName>
    <description>** System Calculated ** Checked when the Sales Order contains a Sales Order Line that is linked to a Subscription.</description>
    <formula>OrderApi__Subscription_Lines__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>** System Calculated ** Checked when the Sales Order contains a Sales Order Line that is linked to a Subscription.</inlineHelpText>
    <label>Has Subscription</label>
    <type>Checkbox</type>
</CustomField>