unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Invoice_Date__c</fullName>
    <description>**System Calculated/Conditional/Override** The date to use as the Invoice Date for any Invoice generated from the Sales Order only applies to Sales Orders where Is Scheduled is not set to true.</description>
    <inlineHelpText>**System Calculated/Conditional/Override** The date to use as the Invoice Date for any Invoice generated from the Sales Order only applies to Sales Orders where Is Scheduled is not set to true.</inlineHelpText>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>