unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated/Override** Checked when a recurring order or contract is active.</description>
    <inlineHelpText>**System Calculated/Override** Checked when a recurring order or contract is active.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>