unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Is_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when a Sales Order is cancelled.</description>
    <inlineHelpText>Checked when a Sales Order is cancelled.</inlineHelpText>
    <label>Is Cancelled</label>
    <type>Checkbox</type>
</CustomField>