unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**SYSTEM FIELD - Identifies Sales Orders as ready for payment with a status of Unpaid and identifies Invoices with a status of Draft until it is posted and ready for payment.</description>
    <inlineHelpText>**System Calculated/Override** Checked when the Sales Order is closed. Sales Orders close automatically when paid in full by the customer, when a contract expires, or when a contract/recurring Sales Order is cancelled.</inlineHelpText>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>