unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Is_Evergreen__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Evergreen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated/Override** Checked when a Sales Order is charged to the customer on a recurring, never-ending basis. These &quot;Standing Sales Orders&quot; are never closed until cancelled.</description>
    <inlineHelpText>**System Calculated/Override** Checked when a Sales Order is charged to the customer on a recurring, never-ending basis. These &quot;Standing Sales Orders&quot; are never closed until cancelled.</inlineHelpText>
    <label>Is Evergreen</label>
    <type>Checkbox</type>
</CustomField>