unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Is_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated/Conditional/Override** Checked when the Sales Order has generated Invoices as a means to collect payment. Default unchecked. Automatically checked if &quot;Posting Entity&quot; is set to &quot;Invoice&quot;.</description>
    <inlineHelpText>**System Calculated/Conditional/Override** Checked when the Sales Order has generated Invoices as a means to collect payment. Default unchecked. Automatically checked if &quot;Posting Entity&quot; is set to &quot;Invoice&quot;.</inlineHelpText>
    <label>Is Invoiced</label>
    <type>Checkbox</type>
</CustomField>