unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Is_Open__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Open__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when the sales order/invoice is in open status</description>
    <inlineHelpText>Checked when the sales order/invoice is in open status</inlineHelpText>
    <label>RESERVED</label>
    <type>Checkbox</type>
</CustomField>