unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Is_Pending_Payment__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Pending_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the related Sales Order is pending payment due to offsite payment or shippable items.</description>
    <inlineHelpText>When checked, the related Sales Order is pending payment due to offsite payment or shippable items.</inlineHelpText>
    <label>Is Pending Payment</label>
    <type>Checkbox</type>
</CustomField>