unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Is_Proforma__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Proforma__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this field is checked, this sales order will be displayed in the community.</description>
    <inlineHelpText>When this field is checked, this sales order will be displayed in the community.</inlineHelpText>
    <label>Is Proforma</label>
    <type>Checkbox</type>
</CustomField>