unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Is_Recurring__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when the Sales Order is recurring and the customer is charged repeatedly based on the Billing Frequency and Billing Frequency UOM calculation.</description>
    <inlineHelpText>Checked when the Sales Order is recurring and the customer is charged repeatedly based on the Billing Frequency and Billing Frequency UOM calculation.</inlineHelpText>
    <label>Is Recurring</label>
    <type>Checkbox</type>
</CustomField>