unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Is_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated/Override** Checked when the Sales Order has generated/scheduled Invoices or E-Payments. Default unchecked.</description>
    <inlineHelpText>**System Calculated/Override** Checked when the Sales Order has generated/scheduled Invoices or E-Payments. Default unchecked.</inlineHelpText>
    <label>Is Scheduled</label>
    <type>Checkbox</type>
</CustomField>