unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Is_Suspended__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Suspended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when a recurring Sales Order is suspended. When a Sales Order is suspended the customer will not be charged until the box is unchecked.</description>
    <inlineHelpText>Checked when a recurring Sales Order is suspended. When a Sales Order is suspended the customer will not be charged until the box is unchecked.</inlineHelpText>
    <label>Is Suspended</label>
    <type>Checkbox</type>
</CustomField>