unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Is_Voided__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Voided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when the sales order/invoice is in voided status</description>
    <inlineHelpText>Checked when the sales order/invoice is in voided status</inlineHelpText>
    <label>Is Voided</label>
    <type>Checkbox</type>
</CustomField>