unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Item_Count__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item_Count__c</fullName>
    <description>**System Calculated** Count of the number of items related to the sales order.</description>
    <inlineHelpText>**System Calculated** Count of the number of items related to the sales order.</inlineHelpText>
    <label>Item Count</label>
    <summaryForeignKey>OrderApi__Sales_Order_Line__c.OrderApi__Sales_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>