unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__JSON_Data__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__JSON_Data__c</fullName>
    <description>Stores availabe badge types for related Sales Order Lines as JSON format.</description>
    <inlineHelpText>Stores availabe badge types for related Sales Order Lines as JSON format.</inlineHelpText>
    <label>SYSTEM</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>