unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Mass_Proforma_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Mass_Proforma_Email_Subject__c</fullName>
    <description>Subject field used for mass proforma emails. Populated from related Subscription Plan or Business Group.</description>
    <inlineHelpText>Subject field used for mass proforma emails. Populated from related Subscription Plan or Business Group.</inlineHelpText>
    <label>SYSTEM</label>
    <length>240</length>
    <type>Text</type>
</CustomField>