unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Memo__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Memo__c</fullName>
    <description>Optional memo that displays on the sales order sent to the customer as well as on customer statements.</description>
    <inlineHelpText>Optional memo that displays on the sales order sent to the customer as well as on customer statements.</inlineHelpText>
    <label>Memo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>