unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Number_of_Installments__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Number_of_Installments__c</fullName>
    <description>**Required Conditionally** The number of invoices or scheduled payments to create for the payment schedule. Required for Sales Orders with Scheduled Payments with Schedule Type of &quot;Termed Recurring&quot; or &quot;Installment&quot;.</description>
    <inlineHelpText>**Required Conditionally** The number of invoices or scheduled payments to create for the payment schedule. Required for Sales Orders with Scheduled Payments with Schedule Type of &quot;Termed Recurring&quot; or &quot;Installment&quot;.</inlineHelpText>
    <label>Number of Installments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>