unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Overall_Total__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Overall_Total__c</fullName>
    <description>Overall Amount of Sales Order.</description>
    <inlineHelpText>Overall Amount of Sales Order.</inlineHelpText>
    <label>Overall Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>