unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Paid_Date__c</fullName>
    <description>Date when the sales order was paid in full.</description>
    <inlineHelpText>Date when the sales order was paid in full.</inlineHelpText>
    <label>Paid Date</label>
    <type>Date</type>
</CustomField>